--- a/.github/workflows/vercel-cd.yml
+++ b/.github/workflows/vercel-cd.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
 env:
-  VERCEL_ORG_ID: ${{ sercrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ sercrets.VERCEL_PROJECT_ID }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 jobs:
   vercel-cd:
